basic setting changes

--- a/src/app/layout/page/pages/forget-password/forget-password.html
+++ b/src/app/layout/page/pages/forget-password/forget-password.html
@@ -2,16 +2,23 @@
   <div class="row w-100 justify-content-center">
     <div class="col-md-4 col-sm-10 p-4 shadow-lg bg-white rounded">
       <h2 class="text-center mb-4">Forgot Password</h2>
+
       <form [formGroup]="forgotPasswordForm">
         <div class="form-group mb-3">
           <label for="email" class="form-label">Email</label>
           <input type="email" id="email" class="form-control" formControlName="email"
-            placeholder="Enter your registered email"
-            [ngClass]="{ 'is-invalid': submitted && f['email'].errors }" />
-          <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
-            <div *ngIf="f['email'].errors['required']">Email is required.</div>
-            <div *ngIf="f['email'].errors['email']">Invalid email address.</div>
+            placeholder="Enter your registered email" [ngClass]="{ 'is-invalid': submitted && f['email'].errors }" />
+
+          @if (submitted && f['email'].errors; as emailErrors) {
+          <div class="invalid-feedback">
+            @if (emailErrors['required']) {
+            <div>Email is required.</div>
+            }
+            @if (emailErrors['email']) {
+            <div>Invalid email address.</div>
+            }
           </div>
+          }
         </div>
 
         <div class="mb-3">
@@ -19,6 +26,7 @@
             Send Reset Link
           </button>
         </div>
+
         <div class="mb-3">
           <button type="button" class="btn w-100 text-white"
             style="background: linear-gradient(to right, #d53369, #cbad6d);" (click)="onCancel()">
