--- a/src/app/layout/shared/mainlayout-component/mainlayout-component.html
+++ b/src/app/layout/shared/mainlayout-component/mainlayout-component.html
@@ -1,4 +1,4 @@
-<app-header-component></app-header-component>>
+<app-header-component></app-header-component>
 <div class="layout">
 <app-sidebar-component></app-sidebar-component>
   <div class="content">
