--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,7 +1,10 @@
 // Light Theme Colors
-$primary-color: #1976d2;
+$primary-color: #a18cd1;
+$primary-btn-color:linear-gradient(135deg, #a18cd1 0%, #771c36 100%);
 $accent-color: #ff4081;
 $background-color: #f5f6fa;
+$navbar-bakground-color:linear-gradient(135deg, #a18cd1 0%, #fbc2eb 100%);
+$navbar-submenu-bakground-color:linear-gradient(135deg, #a18cd1 0%, #fbc2eb 100%);
 $text-color: #212121;
 $border-color: #ddd;
  
