--- a/src/assets/styles/navbar.scss
+++ b/src/assets/styles/navbar.scss
@@ -1,3 +1,4 @@
+@use 'variables';
 .navbar-menu {
     position: fixed;
     top: 0;
@@ -13,7 +14,7 @@
     list-style: none;
     // background: linear-gradient(to right, #000428, #004e92);
     // background: linear-gradient(135deg, #f7971e 0%, #998426 100%);
-    background: linear-gradient(135deg, #a18cd1 0%, #fbc2eb 100%);
+    background: variables.$navbar-bakground-color;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 
     .navbar-item {
@@ -150,6 +151,16 @@
                 margin-left: auto;
             }
 
+            button.dropdown-item {
+                background: none;
+                border: none; 
+            }
+
+            button.dropdown-item:hover {
+                background-color: #f8f9fa;
+                /* Bootstrap hover style */
+            }
+
 
             .submenu {
                 position: absolute;
@@ -159,7 +170,7 @@
                 display: none;
                 flex-direction: column;
                 // background: linear-gradient(to right, #000428, #004e92);
-                background: linear-gradient(135deg, #a18cd1 0%, #fbc2eb 100%);
+                background: variables.$navbar-submenu-bakground-color;
                 border-radius: 4px;
                 padding: 0.5rem 0;
                 z-index: 1000;
