--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,55 +16,8 @@
 @use './assets/styles/modal';
 @use './assets/styles/table';
 
-@use './assets/styles/loader';
+@use './assets/styles/loader'; 
+@use '../src/assets/styles/main.scss';
 
 
-html {
-  @include mat.theme((color: (primary: mat.$rose-F,
-        tertiary: mat.$red-palette,
-      ),
-      typography: Roboto,
-      density: 0,
-    ));
-}
 
-body {
-  color-scheme: light;
-  margin: 0;
-}
-
-html,
-body {
-  margin: 0;
-   font-family: 'Outfit', sans-serif;
-  height: 100%;
-}
-
-button, li {
-  &:hover {
-    cursor: pointer !important;
-  }
-}
-
-
-.container-fluid {
-  box-shadow: 0 2px 8px rgba(255, 255, 255, 0.05);
-
-}
-
-::ng-deep .custom-ng-select.ng-invalid.ng-dirty .ng-select-container {
-  border: 1px solid #dc3545 !important; 
-  box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25); 
-}
-.register-wrapper {
-  height: 100vh;
-  background: #f8f9fa; // light gray background
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.register-card {
-  width: 100%;
-  max-width: 400px;
-}
